--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 
 		<div class="row">
 			<div>
-				<h1>Deadpool needs <span id="number-to-guess"></span> bullets!</h1>
+				<h1>Deadpool needs <span class="infoBox" id="number-to-guess"></span> bullets!</h1>
 			</div>
 			<div>
-				<h1>Deadpool has <span id="loadout"></span> bullets!</h1>
+				<h1>Deadpool has <span class="infoBox" id="loadout"></span> bullets!</h1>
 			</div>
 
 		</div>
@@ -71,10 +71,11 @@
 
 
 
+
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
   <script type="text/javascript">
-
+/*
 
 $(document).ready(function() {
 
@@ -84,7 +85,6 @@ $(document).ready(function() {
 
 });
 
-//var mb = $('#myDiv').text();
 
 var targetNumber = $('#number-to-guess').text();
  
@@ -110,17 +110,19 @@ $(".bullet-image").on("click", function() {
 
 	$("#loadout").html(counter);
 
-	/*alert ("New Score: " + counter);
+	
 
-	if (counter===targetNumber) {
+	if (counter==targetNumber) {
 		alert("You win!");
 	}
-	else if (counter >= targetNumber) {
+	/*else if (counter >= targetNumber) {
 		alert("You lose!");
 	}
-	*/
-}); 
+	
+}); */
 
   </script>
+
+  <script src="assets/javascript/game.js"></script>
 </body>
 </html>
