--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<h1>Deadpool needs <span class="infoBox" id="number-to-guess"></span> bullets!</h1>
 			</div>
 			<div>
-				<h1>Deadpool has <span class="infoBox" id="loadout"></span> bullets!</h1>
+				<h1>Deadpool has <span class="infoBox" id="loadout">0</span> bullets!</h1>
 			</div>
 
 		</div>
@@ -74,55 +74,8 @@
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-  <script type="text/javascript">
-/*
+<script type="text/javascript" src="assets/javascript/game.js"></script>
 
-$(document).ready(function() {
-
-	var targetNumber = random;
-	var random = Math.floor(Math.random() * 120) + 19;
-	$("#number-to-guess").html(random);
-
-});
-
-
-var targetNumber = $('#number-to-guess').text();
  
-$("#number-to-guess").text(targetNumber);
-
-var counter = 0;
-
-var bulletOptions = [10,5,3,7];
-
-for (var i = 0; i < bulletOptions.length; i++) {
-	var imageBullet = $("<img>");
-	imageBullet.addClass("bullet-image");
-	imageBullet.attr("src", "https://thumbs.dreamstime.com/t/bullet-icon-cartoon-style-isolated-vector-illustration-88211476.jpg");
-	imageBullet.attr("data-bulletvalue", bulletOptions[i]);
-	$("#bullets").append(imageBullet);
-}
-
-$(".bullet-image").on("click", function() {
-	var bulletValue = ($(this).attr("data-bulletvalue"));
-	bulletValue = parseInt(bulletValue);
-
-	counter += bulletValue;
-
-	$("#loadout").html(counter);
-
-	
-
-	if (counter==targetNumber) {
-		alert("You win!");
-	}
-	/*else if (counter >= targetNumber) {
-		alert("You lose!");
-	}
-	
-}); */
-
-  </script>
-
-  <script src="assets/javascript/game.js"></script>
 </body>
 </html>
